--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -7,9 +7,9 @@ output:
     theme: flatly
 ---
 
-> This document is best viewed on a computer and is not optimised for mobile viewing.
->
-> **DISCLAIMER: Not an epidemiologist, so the information below should not be used for policy. Neither has this document gone through peer review, so please do not cite it.**
+This document is best viewed on a computer and is not optimised for mobile viewing.
+
+**DISCLAIMER: Not an epidemiologist, so the information below should not be used for policy. Neither has this document gone through peer review, so please do not cite it.**
 
 
 
@@ -234,7 +234,8 @@ hosp_prop = 0.2        # proportion of cases requiring hospitalisation
 date_no_hosp = as.Date("2020-03-24") # date when hospitalisation not required for positive, asymptomatic cases
 ```
 
-Case load is an important metric that is correlated also with hospital load. Here, it's the sum of people who are not recovered. 
+Case load is an important metric that is correlated also with hospital load. These are split into those that are in ICU, those that are hospitalised and those which test positive but have no symptoms and are in isolation facilities.
+
 
 ```{r}
 df_cases_day$date = as.Date(df_cases_day$date)
@@ -251,10 +252,13 @@ renderPlot({
     geom_ribbon(aes(ymin=0, ymax=case_load), fill="#8cd6ff", alpha=.5) + 
     geom_line(color=cbp1[3], size=1) + 
     geom_point(color=cbp1[3], size=2) + 
+    geom_ribbon(aes(ymin=0, ymax=I2), fill="#75ccd1", alpha=.5) + 
+    geom_line(aes(y=I2), color="#35c4cc", size=1) + 
+    geom_point(aes(y=I2), color="#35c4cc", size=2) + 
     geom_ribbon(aes(ymin=0, ymax=I1*icu_scale), fill="#3296cf", alpha=.5) + 
     geom_line(aes(x=date, y=I1*icu_scale), color=cbp1[6], size=1) +
     geom_point(aes(x=date, y=I1*icu_scale), color=cbp1[6], size=2) + 
-    xlab("") + ylab("Number of active cases (light blue)\n") + 
+    xlab("") + ylab("Number of active cases (light blue)\n& hospital cases (turquoise)\n") + 
     scale_x_date(date_breaks = "week", date_minor_breaks = "1 day", date_labels = "%d-%b") +
     scale_y_continuous(sec.axis = sec_axis(~ ./icu_scale, name="Number of active ICU cases (dark blue)\n")) +
     theme +
