--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -66,7 +66,7 @@ cbp1 = c("#999999", "#E69F00", "#56B4E9", "#009E73", "#F0E442", "#0072B2", "#D55
 
 ## What are the figures
 
-### Cases through time
+### New cases
 
 #### New cases through time
 ```{r}
