--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -368,25 +368,22 @@ Legend: light orange = community isolation facilities, dark orange = private hos
 Note: cases whose hospitals were pending at time of press release and those who are not admitted are omitted from table above. There were `r no_hospital_data` (of `r dim(df)[1]`) such cases. 
 
 ```{r}
-renderPlot({
-  ggplot(df[!tolower(hospital) %in% c("unknown", "not admitted"), 
-    list(cases=.N) , by=c("confirmed.at.date", "hospital")], aes(x=confirmed.at.date, y=cases)) +
-    geom_bar(stat="identity", color=cbp1[6]) +
-    facet_wrap(~hospital) +
-    ylab("Number of new cases\n") + xlab("") + ggtitle("New cases conveyed to hospitals")
-    theme
-})
-```
-
-```{r}
 df_cases_day_hosp = get_df_cases_day_hosp(df)
 melted_df_cases_day_hosp = melt(df_cases_day_hosp, id.vars=c("date", "hospital"), 
                                 measure.vars=c("I", "R", "D"))
+
+hosp_cases = df[, list(cases=.N), by=c("confirmed.at.date", "hospital")]
+
+hosp_scale=10
+
 renderPlot({
-  ggplot(melted_df_cases_day_hosp[hospital !="" & variable=="I"], aes(x=date, y=value)) +
-    geom_line(show.legend=F) +
+  ggplot(melted_df_cases_day_hosp[!(hospital %in% c("unknown", "")) & variable=="I"], aes(x=date, y=value)) +
+    geom_line(show.legend=F, color=cbp1[6], size=1) +
+    geom_bar(data=hosp_cases, aes(x=confirmed.at.date, y=cases*hosp_scale), 
+             stat="identity", fill=cbp1[3], color=NA, alpha=0.6) +
     facet_wrap(~hospital) +
-    ylab("Number of active cases in hospital\n") + xlab("") + ggtitle("Active cases in hospitals") +
+    scale_y_continuous(sec.axis = sec_axis(~ ./hosp_scale, name="Number of new cases in hospitals (bars)\n")) +
+    ylab("Number of active cases in hospital (line)\n") + xlab("") + 
     theme
 })
 ```
