--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -208,7 +208,8 @@ gs = list(ggplot(data_1st_wave, aes(x=reorder(camelcase_labeller("", country.of.
     xlab("") + ylab("\nNumber of imported cases detected") + ggtitle("Second wave") +
     theme(axis.text.y=element_text(size=rel(1))) +
     guides(fill=F) +
-    scale_y_continuous(breaks=seq(0, max(data_2nd_wave$N, na.rm=T)+40, 20)) +
+    scale_y_continuous(breaks=seq(0, max(data_2nd_wave$N, na.rm=T)+20, 20), 
+                       limits=c(0, max(data_2nd_wave$N, na.rm=T)+20)) +
     geom_text(aes(fill=country.of.origin, y=N+3), colour = "black", 
               fontface = "bold", size=3, show.legend = FALSE, hjust = 0),
 
@@ -245,14 +246,14 @@ icu_scale = 10
 renderPlot({
   ggplot(data=df_cases_day, aes(x=date, y=case_load)) +
     geom_ribbon(aes(ymin=0, ymax=case_load), fill="#8cd6ff", alpha=.5) + 
-    geom_line(color=cbp1[3], size=1) + 
-    geom_point(color=cbp1[3], size=2) + 
+    geom_line(color=cbp1[3], size=.5) + 
+    geom_point(color=cbp1[3], size=1) + 
     geom_ribbon(aes(ymin=0, ymax=I2), fill="#75ccd1", alpha=.5) + 
-    geom_line(aes(y=I2), color="#35c4cc", size=1) + 
-    geom_point(aes(y=I2), color="#35c4cc", size=2) + 
+    geom_line(aes(y=I2), color="#35c4cc", size=.5) + 
+    geom_point(aes(y=I2), color="#35c4cc", size=1) + 
     geom_ribbon(aes(ymin=0, ymax=I1*icu_scale), fill="#3296cf", alpha=.5) + 
-    geom_line(aes(x=date, y=I1*icu_scale), color=cbp1[6], size=1) +
-    geom_point(aes(x=date, y=I1*icu_scale), color=cbp1[6], size=2) + 
+    geom_line(aes(x=date, y=I1*icu_scale), color=cbp1[6], size=.5) +
+    geom_point(aes(x=date, y=I1*icu_scale), color=cbp1[6], size=1) + 
     xlab("") + ylab("Number of active cases (light blue)\n& hospital cases (turquoise)\n") + 
     scale_x_date(date_breaks = "week", date_minor_breaks = "1 day", date_labels = "%d-%b") +
     scale_y_continuous(sec.axis = sec_axis(~ ./icu_scale, name="Number of active ICU cases (dark blue)\n")) +
@@ -298,11 +299,11 @@ death_scale = 1
 renderPlot({
   ggplot(data=df_cases_day, aes(x=date, y=cfr)) + 
     geom_ribbon(aes(ymin=0, ymax=D*death_scale), fill="#ffc394", alpha=.5) + 
-    geom_line(aes(y=D*death_scale), color="#e08f4f", size=1) + 
-    geom_point(aes(y=D*death_scale), color="#e08f4f", size=2) + 
+    geom_line(aes(y=D*death_scale), color="#e08f4f", size=.5) + 
+    geom_point(aes(y=D*death_scale), color="#e08f4f", size=1) + 
     geom_ribbon(aes(ymin=0, ymax=cfr), fill="#de8035", alpha=.5) + 
-    geom_line(color=cbp1[7], size=1) + 
-    geom_point(color=cbp1[7], size=2) + 
+    geom_line(color=cbp1[7], size=.5) + 
+    geom_point(color=cbp1[7], size=1) + 
     xlab("") + ylab("Case Fatality Rate (dark orange)\n") + 
     scale_y_continuous(sec.axis = sec_axis(~ ./death_scale, name="Cumulative deaths (light orange)\n")) +
     scale_x_date(date_breaks = "week", date_minor_breaks = "1 day", date_labels = "%d-%b") + theme +
@@ -400,7 +401,8 @@ df_cases_day_hosp = get_df_cases_day_hosp(df)
 melted_df_cases_day_hosp = melt(df_cases_day_hosp, id.vars=c("date", "hospital"), 
                                 measure.vars=c("I", "R", "D"))
 
-hosp_cases = df[!(tolower(hospital) %in% c("unknown", "")), list(cases=.N), by=c("confirmed.at.date", "hospital")]
+hosp_cases = df[!(tolower(hospital) %in% c("unknown", "", "not admitted")), 
+                list(cases=.N), by=c("confirmed.at.date", "hospital")]
 
 hosp_scale=10
 
@@ -563,7 +565,8 @@ renderPlot({
   ggplot(cluster_cases[no %in% 1:10], aes(x=patient.citizen, fill=patient.citizen)) +
     geom_bar(stat="count") + theme +
     facet_wrap(~no.bract, ncol=3, scales="free_y") + 
-    theme(axis.text.x=element_text(size=rel(1)),
+    theme(axis.text.x = element_blank(), 
+          axis.ticks = element_blank(),
           axis.text.y=element_text(size=rel(1)))+
     scale_y_continuous(breaks=breaks_f) +
     scale_fill_manual(name="", values=cbp1[c(2, 7, 3, 6, 4, 1)]) +
