--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -293,6 +293,8 @@ names(show_deceased) = unlist(
 show_deceased %>%
   mutate(`Infection Source`=cell_spec(`Infection Source`, "html", color="white", background=
     ifelse(grepl("Local transmission", `Infection Source`), cbp1[7], cbp1[3]))) %>%
+  mutate(`Age`=cell_spec(`Age`, "html", color="white", background=
+    ifelse(`Age` < 60, cbp1[7], cbp1[3]))) %>%
   kable("html", escape=F, align="c") %>%
   kable_styling(c("condensed", "responsive"), full_width=F) 
 ```
@@ -310,7 +312,8 @@ renderPlot({
     geom_line(color=cbp1[7], size=.5) + 
     geom_point(color=cbp1[7], size=1) + 
     xlab("") + ylab("Case Fatality Rate (dark orange)\n") + 
-    scale_y_continuous(sec.axis = sec_axis(~ ./death_scale, name="Cumulative deaths (light orange)\n")) +
+    scale_y_continuous(sec.axis=sec_axis(~ ./death_scale, name="Cumulative deaths (light orange)\n",
+                                         breaks=breaks_f)) +
     scale_x_date(date_breaks = "week", date_minor_breaks = "1 day", date_labels = "%d-%b") + theme +
     theme(axis.text.x=element_text(angle = 90))
 })
