[EJYS] Updaate colours

--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -100,7 +100,7 @@ renderPlot({
   data = merge(data, labels, by.x=c("confirmed.at.date", "infection.type"), 
                by.y=c("date", "infection.type"), all.x=T, all.y=T)
 
-  plt = ggplot(data=data[confirmed.at.date >= min_date & confirmed.at.date <= max_date], 
+  ggplot(data=data[confirmed.at.date >= min_date & confirmed.at.date <= max_date], 
                aes(x=confirmed.at.date, y=N, fill=infection.type, label=no)) +
     geom_bar(position='stack', stat="identity") + 
     geom_bar(aes(x=confirmed.at.date, y=R, fill=cbp1[7]), position='stack', stat="identity") + 
@@ -112,21 +112,22 @@ renderPlot({
                       labels=c("Deceased", "Recovered", "Event", "Event/measure",
                                "Imported case", "Local linked", "Local unlinked",
                                "Measure", "Unknown"),
-                      values=c("#525252", cbp1[c(4, 5, 2, 6, 3)], "#8ccff5", "tomato1", cbp1[1])) + 
+                      values=c("darkgreen", cbp1[4], "white", "grey90",
+                               cbp1[c(6, 3)], "#8ccff5", 
+                               "grey80", "navyblue"),
+                      aesthetics = c("fill", "segment.color")) + 
     theme +
     theme(legend.position="bottom", legend.box = "horizontal", 
           axis.text.x=element_text(angle = 90)) +
-    geom_label_repel(nudge_y=40, angle=90, vjust=0, force=5, 
-                     fontface='bold', color='black', size=3, 
+    geom_label_repel(nudge_y=100, direction="x", angle=90, vjust=0, force=2, 
+                     fontface='bold', color="black", size=3, 
                      segment.size=0.5, segment.color='black', 
                      box.padding = unit(0.4, 'lines'), aes(fill=type),
                      arrow = arrow(length = unit(1, "mm")),
-                     point.padding = 0, max.iter=3000, show.legend=F)
-  
-  if(min_date < date_second_wave) {
-    plt = plt + geom_vline(xintercept=date_second_wave, size=1, col=cbp1[2], linetype="dotted")
-  }
-  plt
+                     point.padding = 0, max.iter=3000, show.legend=F) +
+    scale_color_discrete() + 
+    geom_vline(xintercept=date_second_wave, size=.5, col=cbp1[2], linetype="dotted")
+
 })
 ```
 
