--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -408,25 +408,25 @@ Legend: light orange = community isolation facilities, dark orange = private hos
 Note: cases whose hospitals were pending at time of press release and those who are not admitted are omitted from table above. There were `r no_hospital_data` (of `r dim(df)[1]`) such cases. 
 
 ```{r}
-df_cases_day_hosp = get_df_cases_day_hosp(df)
-melted_df_cases_day_hosp = melt(df_cases_day_hosp, id.vars=c("date", "hospital"), 
-                                measure.vars=c("I", "R", "D"))
+# df_cases_day_hosp = get_df_cases_day_hosp(df)
+# melted_df_cases_day_hosp = melt(df_cases_day_hosp, id.vars=c("date", "hospital"), 
+#                                 measure.vars=c("I", "R", "D"))
 
-hosp_cases = df[!(tolower(hospital) %in% c("unknown", "", "not admitted")), 
-                list(cases=.N), by=c("confirmed.at.date", "hospital")]
+# hosp_cases = df[!(tolower(hospital) %in% c("unknown", "", "not admitted")), 
+#                 list(cases=.N), by=c("confirmed.at.date", "hospital")]
 
-hosp_scale=10
+# hosp_scale=10
 
-renderPlot({
-  ggplot(melted_df_cases_day_hosp[!(tolower(hospital) %in% c("unknown", "")) & variable=="I"], aes(x=date, y=value)) +
-    geom_line(show.legend=F, color=cbp1[6], size=1) +
-    geom_bar(data=hosp_cases, aes(x=confirmed.at.date, y=cases*hosp_scale), 
-             stat="identity", fill=cbp1[3], color=NA, alpha=0.6) +
-    facet_wrap(~hospital) +
-    scale_y_continuous(sec.axis = sec_axis(~ ./hosp_scale, name="Number of new cases in hospitals (bars)\n")) +
-    ylab("Number of active cases in hospital (line)\n") + xlab("") + 
-    theme
-})
+# renderPlot({
+#   ggplot(melted_df_cases_day_hosp[!(tolower(hospital) %in% c("unknown", "")) & variable=="I"], aes(x=date, y=value)) +
+#     geom_line(show.legend=F, color=cbp1[6], size=1) +
+#     geom_bar(data=hosp_cases, aes(x=confirmed.at.date, y=cases*hosp_scale), 
+#              stat="identity", fill=cbp1[3], color=NA, alpha=0.6) +
+#     facet_wrap(~hospital) +
+#     scale_y_continuous(sec.axis = sec_axis(~ ./hosp_scale, name="Number of new cases in hospitals (bars)\n")) +
+#     ylab("Number of active cases in hospital (line)\n") + xlab("") + 
+#     theme
+# })
 ```
 
 ### Recovery
@@ -571,8 +571,8 @@ renderPlot({
 ```{r}
 renderPlot({
   cluster_cases$patient.citizen = factor(cluster_cases$patient.citizen,
-    levels=c("citizen", "pr", "wp", "lp", "visitor", "unknown"),
-    labels=c("Citizen", "PR", "WP", "LP", "Visitor", "Unknown"))
+    levels=c("citizen", "pr", "sp", "wp", "lp", "visitor", "unknown"),
+    labels=c("Citizen", "PR", "SP", "WP", "LP", "Visitor", "Unknown"))
   ggplot(cluster_cases[no %in% 1:10], aes(x=patient.citizen, fill=patient.citizen)) +
     geom_bar(stat="count") + theme +
     facet_wrap(~no.bract, ncol=3, scales="free_y") + 
